plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
	id 'com.modrinth.minotaur' version '2.+'
	id 'net.darkhax.curseforgegradle' version '1.2.30'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven { url = "https://maven.terraformersmc.com/" }
	maven { url = "https://api.modrinth.com/maven" }
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"handyshulkers" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"

	// No mappings needed — 26.1 is the first unobfuscated Minecraft version

	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Config screen (YACL) and mod menu integration — both optional at runtime
	compileOnly("maven.modrinth:yacl:${project.yacl_version}") {
		exclude(group: "net.fabricmc.fabric-api")
	}
	compileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"

	// Dev runtime extras: disabled on port/26.2 until YACL + ModMenu ship 26.2-compatible
	// builds. The mod's core behaviour is YACL-free so this doesn't affect smoke testing.
	// localRuntime("maven.modrinth:yacl:${project.yacl_version}") {
	// 	exclude(group: "net.fabricmc.fabric-api")
	// }
	// localRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
}

processResources {
	inputs.property "version", project.version

	exclude '**/CLAUDE.md'

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present. If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
	}
}

// Modrinth publishing — run with ./gradlew modrinth
modrinth {
	token = System.getenv("MODRINTH_TOKEN")
	projectId = "hEULt5Y8"
	versionNumber = project.mod_version
	versionType = project.mod_version.contains("-beta") ? "beta" :
	              project.mod_version.contains("-alpha") ? "alpha" :
	              project.mod_version.contains("-rc") ? "beta" : "release"
	uploadFile = jar
	gameVersions = [project.minecraft_version]
	loaders = ["fabric"]
	changelog = rootProject.file("CHANGELOG.md").exists() ? extractChangelog(rootProject.file("CHANGELOG.md").text, project.mod_version) : ""
	dependencies {
		required.project "fabric-api"
	}
}

// CurseForge publishing — run with ./gradlew curseforge
tasks.register('curseforge', net.darkhax.curseforgegradle.TaskPublishCurseForge) {
	dependsOn tasks.jar
	apiToken = System.getenv("CURSEFORGE_TOKEN")

	def mainFile = upload("1518570", jar)
	mainFile.changelog = rootProject.file("CHANGELOG.md").exists() ? extractChangelog(rootProject.file("CHANGELOG.md").text, project.mod_version) : ""
	mainFile.changelogType = 'markdown'
	mainFile.releaseType = project.mod_version.contains("-beta") ? 'beta' :
	                       project.mod_version.contains("-alpha") ? 'alpha' :
	                       project.mod_version.contains("-rc") ? 'beta' : 'release'
	mainFile.addModLoader('Fabric')
	mainFile.addGameVersion(project.minecraft_version)
	mainFile.addJavaVersion('Java 25')
	mainFile.addRequirement('fabric-api')
}

// Extract the changelog section for a specific version from CHANGELOG.md
static String extractChangelog(String content, String version) {
	def lines = content.split('\n')
	def capture = false
	def result = []
	for (line in lines) {
		if (line.matches("(?i)^## .*${java.util.regex.Pattern.quote(version)}.*")) {
			capture = true
			continue
		}
		if (capture && line.matches("^## .*")) {
			break
		}
		if (capture) {
			result << line
		}
	}
	return result.join('\n').trim()
}
